build mac + only do rootless + it compiles but respring loops

--- a/control
+++ b/control
@@ -6,4 +6,4 @@ Description: An awesome MobileSubstrate tweak!
 Maintainer: newwares
 Author: newwares
 Section: Tweaks
-Depends: mobilesubstrate (>= 0.9.5000), preferenceloader
+Depends: mobilesubstrate (>= 0.9.5000), preferenceloader, ws.hbang.common (>= 1.17)
