--- a/brightnesscurveprefs/Makefile
+++ b/brightnesscurveprefs/Makefile
@@ -1,4 +1,6 @@
-TARGET := iphone:clang:latest:7.0
+TARGET := iphone:clang:latest:15.0
+ARCHS = arm64e
+
 
 include $(THEOS)/makefiles/common.mk
 
@@ -7,6 +9,7 @@ BUNDLE_NAME = BrightnessCurvePrefs
 BrightnessCurvePrefs_FILES = BSCRootListController.m
 BrightnessCurvePrefs_FRAMEWORKS = UIKit
 BrightnessCurvePrefs_PRIVATE_FRAMEWORKS = Preferences
+BrightnessCurvePrefs_EXTRA_FRAMEWORKS += Cephei CepheiPrefs
 BrightnessCurvePrefs_INSTALL_PATH = /Library/PreferenceBundles
 BrightnessCurvePrefs_CFLAGS = -fobjc-arc
 
