--- a/brightnesscurveprefs/Makefile
+++ b/brightnesscurveprefs/Makefile
@@ -7,7 +7,7 @@ include $(THEOS)/makefiles/common.mk
 BUNDLE_NAME = BrightnessCurvePrefs
 
 BrightnessCurvePrefs_FILES = BSCRootListController.m
-BrightnessCurvePrefs_FRAMEWORKS = UIKit
+BrightnessCurvePrefs_FRAMEWORKS = UIKit IOKit
 BrightnessCurvePrefs_PRIVATE_FRAMEWORKS = Preferences
 BrightnessCurvePrefs_EXTRA_FRAMEWORKS += Cephei CepheiPrefs
 BrightnessCurvePrefs_INSTALL_PATH = /Library/PreferenceBundles
