--- a/control
+++ b/control
@@ -1,8 +1,8 @@
-Package: com.newwares.brightnesscurve
-Name: BrightnessCurve
+Package: com.newwares.autobrightnesscurve
+Name: AutoBrightnessCurve
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: Lets you specify a custom curve (brightness vs. ambient light) for the auto-brightness function in iPhones.
 Maintainer: newwares
 Author: newwares
 Section: Tweaks
