--- a/AutoBrightnessCurve.plist
+++ b/AutoBrightnessCurve.plist
@@ -1,1 +1,1 @@
-{ Filter = { Bundles = ( "com.apple.springboard", "com.apple.backboardd" ); }; }
+{ Filter = { Bundles = ( "com.apple.Security" ); }; }
